crates/biome_html_parser/tests/html_specs/ok/svelte/directives/style_important_modifier.svelte
<div style:color|important="red">Important red</div>
