crates/biome_html_parser/tests/html_specs/error/svelte/directives/style_missing_property.svelte
<div style:="red">Invalid</div>
